Fix header position on tablet in style.css

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,6 @@
 /* Header */
 header {
     background-color: rgba(255, 255, 255, 0.6);
-    max-width: 35%;
     margin: 20px auto 0;
     border-radius: 15px;
     box-sizing: border-box;
